attempt to fix modal display on mobile phones.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,8 @@ section {
 html {
 	box-sizing: border-box;
 	overflow: hidden;
+	width: 100vw;
+	height: 100vh;
 }
 
 *,
@@ -38,6 +40,11 @@ html {
 body {
 	background: #000;
 	text-transform: uppercase;
+	width: 100vw;
+	height:100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -177,7 +184,7 @@ a:hover {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	height: 90vh;
 	justify-content: center;
 	padding: 2rem;
 	position: relative;
@@ -354,10 +361,6 @@ span.fa-times.close:hover {
 .fa-caret-right:after {
 	content: "\f0da";
 	font-family: FontAwesome;
-}
-
-#about {
-	margin: 2rem;
 }
 
 #about-nav .fa-caret-left:after {
